--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -28,5 +28,5 @@ jobs:
   build-app: 
       runs-on: ubuntu-latest
       steps: 
-        - users: actions/checkout@v2
+        - uses: actions/checkout@v2
         - run: tree
