--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -43,7 +43,7 @@ jobs:
       runs-on: ubuntu-latest
       env: #repo secrets
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        VERCEL_TOKKEN: ${{ secrets.VERCEL_TOKEN }}
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}            
       steps: 
         - uses: actions/checkout@v2
