--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -41,6 +41,8 @@ on: [push]
 jobs:
   build-app: 
       runs-on: ubuntu-latest
+      outputs:
+        text: ${{ steps.finished.outputs.text }}
       env: #repo secrets
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
         VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -60,4 +62,13 @@ jobs:
         - name: Deploying the project
           run: yarn deploy
         - name: Setup finish
-          run: echo "Setup finished"
+          id: finished
+          run: echo "::set-output name=text::hello-world-from-build-job"
+  test-app:
+      needs: build-app # dependent job
+      runs-on: ubuntu-latest
+      env: 
+        MY_JOB_OUTPUT: ${{ needs.build-app.outputs.text }}
+      steps: 
+        - run: echo $MY_JOB_OUTPUT
+       
